@@ -1,3 +1,11 @@
+2004-03-17  Lars Clausen  <lars@raeder.dk>
+
+	* xmldocs.make: 
+	* omf.make: 
+	* doc/en/Makefile.am: 
+	* doc/pl/Makefile.am: 
+	New more standard way to install the XML-based manuals.  
+
 2004-03-15  Lars Clausen  <lars@raeder.dk>
 
 	* objects/standard/box.c (box_move_handle): More intuitive fixed
